2011-03-13 Santiago Ramos <sramos@sitiodistinto.net> Version 0.2


2011-02-18 Santiago Ramos <sramos@sitiodistinto.net> Version 0.1 

  * Funcionalidad inicial de TPV con ventas, albaranes de 
    venta y facturas de compra y venta