@@ -42,4 +42,5 @@ Rails::Initializer.run do |config|
   ENV['TPV-CIF'] = 'A-12345678-B'
   ENV['TPV-DIRECCION'] = "c/ Aroyo del Olivar, 34"
   ENV['TPV-FACTURA-PREFIX'] = "LEDZ-"
+  ENV['TPV-PRINTER'] = "lpr -P TM-T70 -o cpi=20"
 end
